@@ -1,5 +1,5 @@
 name="lacaml"
-version="4.6.2"
+version="4.6.3"
 description="LACAML - BLAS/LAPACK-interface for OCaml"
 
 requires="lacaml.core"
