@@ -1,3 +1,7 @@
+2008-10-30:  Added new matrix-vector function:
+
+               * trsv
+
 2008-10-26:  Added two new matrix functions:
 
                * packed
